--- a/infrastructure/entry-points/reactive-web/build.gradle
+++ b/infrastructure/entry-points/reactive-web/build.gradle
@@ -14,8 +14,10 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+
     implementation 'org.springframework.security:spring-security-oauth2-resource-server'
     implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
