--- a/applications/app-service/build.gradle
+++ b/applications/app-service/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.springframework.boot:spring-boot-starter-validation"
     implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.8.11'
+    implementation 'org.postgresql:postgresql'
+    implementation 'org.liquibase:liquibase-core'
 
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
 
